FEATURE: Added in the ability to map serial numbers to branch names and some other features

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,6 +40,7 @@
             <label>End Date: <input type="date" name="end_date" value="{{ end_date }}"></label>
             <button class="btn" type="submit">Filter</button>
             <a href="/download_xlsx?start_date={{ start_date }}&end_date={{ end_date }}" class="btn">Download XLSX</a>
+            <a href="/device_branch_mapping" class="btn" style="background: #f1c40f; color: #222; margin-left: 10px;">Device-Branch Mapping</a>
         </form>
         <div class="section">
             <h2>Attendance Summary</h2>
